# intellij-community

./: AGENTS.md  BUILD.bazel  MODULE.bazel  common.bazelrc
.ai/: README.md  render-guides.mjs
.ai/topics/: TESTING-internals.md  commits.md
RegExpSupport/: BUILD.bazel
fleet/rhizomedb/: BUILD.bazel
images/: BUILD.bazel
java/java-impl/: BUILD.bazel
java/java-tests/: BUILD.bazel
lib/: BUILD.bazel  MODULE.bazel
native/XPlatLauncher/: Cargo.toml
platform/analysis-api/: api-dump.txt
platform/analysis-impl/: api-dump-unreviewed.txt  api-dump.txt
platform/build-scripts/: BUILD.bazel
platform/build-scripts/bazel/: .bazelrc  MODULE.bazel
platform/collaboration-tools/: api-dump-experimental.txt
platform/core-api/: api-dump-experimental.txt  api-dump.txt
platform/credential-store-impl/: BUILD.bazel
platform/eel/: api-dump-experimental.txt
platform/external-system-impl/: api-dump.txt
platform/ide-core/: api-dump.txt
platform/lang-impl/: BUILD.bazel  api-dump-unreviewed.txt  api-dump.txt
platform/lvcs-impl/: api-dump.txt
platform/platform-api/: BUILD.bazel  api-dump.txt
platform/platform-impl/: BUILD.bazel  api-dump-unreviewed.txt  api-dump.txt
platform/platform-tests/: BUILD.bazel
platform/project-frame/: BUILD.bazel
platform/settings-sync-core/: BUILD.bazel
platform/statistics/: BUILD.bazel
platform/testFramework/: BUILD.bazel
platform/testRunner/: BUILD.bazel
platform/vcs-impl/: api-dump.txt
platform/welcome-screen/: BUILD.bazel  api-dump.txt
platform/welcome-screen-api/: BUILD.bazel
platform/welcome-screen-impl/: BUILD.bazel
platform/xdebugger-impl/: BUILD.bazel  api-dump-experimental.txt  api-dump-unreviewed.txt  api-dump.txt
platform/xdebugger-testFramework/: BUILD.bazel
plugins/agent-workbench/: AGENTS.md  README.md  plugin-content.yaml
plugins/git4idea/: api-dump-unreviewed.txt
plugins/gradle/: BUILD.bazel
plugins/groovy/: BUILD.bazel
plugins/ide-features-trainer/: BUILD.bazel
plugins/junit5_rt_tests/: BUILD.bazel
plugins/junit6_rt_tests/: BUILD.bazel
plugins/kotlin/: BUILD.bazel  kotlin_test_dependencies.bzl
plugins/lombok/: BUILD.bazel
plugins/stream-debugger/: BUILD.bazel
plugins/terminal/: BUILD.bazel
plugins/xpath/: BUILD.bazel
python/: BUILD.bazel
python/conda/: BUILD.bazel
python/helpersTests/: run_tests.sh
python/openapi/: BUILD.bazel
python/pipenv/: BUILD.bazel
python/pluginResources/: intellij.python.community.impl.xml
python/python-features-trainer/: BUILD.bazel
python/python-hatch/: BUILD.bazel
python/python-markdown/: BUILD.bazel
python/python-psi-impl/: BUILD.bazel
python/python-pyproject/: BUILD.bazel
python/python-terminal/: BUILD.bazel
python/python-venv/: BUILD.bazel
tools/: clone-from-local-cache.mjs
tools/intellij.lambda.sampleTests/: BUILD.bazel
xml/tests/: BUILD.bazel
(+1013 files in other folders)
